Fixed course-select-wrapper on devices without gap support

--- a/src/components/ui/OutputCard.css
+++ b/src/components/ui/OutputCard.css
@@ -78,24 +78,40 @@
     --rotate: 360deg;
 }
 
-
 #course-select-wrapper{
     display: flex;
     flex-wrap: no-wrap;
     justify-content: center;
-    gap: .5em;
     justify-items: center;
 
     width: 100%;
     height: 2.5em;
 
-    margin-top: 1em;
+
+    --gap: .5em;
+    margin: calc(-1*var(--gap)) 0 0 calc(-1*var(--gap));
+    
 }
 
 #course-select-wrapper * {
     height: 100%;
 }
 
+#course-select-wrapper > * {
+    margin: var(--gap) 0 0 var(--gap);
+}
+
+@supports ((aspect-ratio: 1 / 1) and (gap: 0)) {
+    #course-select-wrapper{
+        gap: var(--gap);
+        margin: 0;
+        margin-top: 1em;
+    }
+
+    #course-select-wrapper > * {
+        margin: 0;
+    }
+}
 
 #checkboxes {
     display: flex;
